syntax = "proto3";

service Example {
    rpc responeWithLight (LightRequest) returns (LightReponse) {}
    rpc responeWithLightStream (LightStreamRequest) returns (stream LightReponse) {}
    rpc responseWithCopies (CopiesRequest) returns (CopiesResponse){}
}

message LightRequest{
    string name = 1;
}

message LightStreamRequest{
    string name = 1;
    string num_response = 2;
}

//define message
message LightReponse {
    string message = 1;
}
